style.css
#header {
    text-align: center;
    font-size: 48px;
}

@font-face {
    font-family: 'calcFont';
    src: url('./Calculator.ttf');
}

#upperDisplay, #lowerDisplay{
    width: 320px;
    background-color: black;
    font-weight: 500;
    font-family: 'calcFont';
    color: goldenrod;
    text-align: right;
    position: absolute;
}

#upperDisplay {
    right: 30px;
    top: 15px;
    height: 35px;
    font-size: 26px;
}

#lowerDisplay {
    right: 30px;
    top: 50px;
    height: 50px;
    font-size: 60px;
}

#display {
    background-color: black;
    width: 340px;
    height: 95px;
    border-radius: 10px;
    position: absolute;
    right: 20px;
    top: 15px;
}

#calculator {
    position: relative;
    background-color: darkgrey;
    width: 380px;
    height: 550px;
    border-radius: 5%;
    margin: auto;
    border: 2px solid black;
}

.button {
    color: black;
    font-size: 20px;
    font-weight: 500;
    border-radius: 10%;
    width: 70px;
    height: 60px;
    margin: 10px;
    position: absolute;
}

.number {
    background-color: slategray;
}

.operator {
    background-color: sandybrown;
}

#zero {
    bottom: 10px;
    left: 10px;
}

#backspace {
    bottom: 10px;
    left: 190px;
}

#equals {
    bottom: 10px;
    left: 280px;
}

#decimal {
    bottom: 10px;
    left: 100px;
}

#one {
    bottom: 90px;
    left: 10px;
}

#two {
    bottom: 90px;
    left: 100px;
}

#three {
    bottom: 90px;
    left: 190px;
}

#plus {
    bottom: 90px;
    left: 280px;
}

#four {
    bottom: 170px;
    left: 10px;
}

#five {
    bottom: 170px;
    left: 100px;
}

#six {
    bottom: 170px;
    left: 190px;
}

#minus {
    bottom: 170px;
    left: 280px;
}

#seven {
    bottom: 250px;
    left: 10px;
}

#eight {
    bottom: 250px;
    left: 100px;
}

#nine {
    bottom: 250px;
    left: 190px;
}

#multiply {
    bottom: 250px;
    left: 280px;
}

#clear {
    bottom: 330px;
    left: 10px;
}

#sqroot {
    bottom: 330px;
    left: 100px;
}

#power {
    bottom: 330px;
    left: 190px;
}

#divide {
    bottom: 330px;
    left: 280px;
}

